# pdf-qa

./: .gitignore  app.py  pyproject.toml
notebooks/: namespace.ipynb  pinecone.ipynb
