[tool.poetry]
name = "pdf-qa"
version = "0.1.0"
description = ""
authors = ["Koichiro Mori <f2forest@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
langchain = "^0.2.12"
langchain-openai = "^0.1.20"
chainlit = "^1.1.402"
pypdf = "^4.3.1"
langchain-community = "^0.2.11"
langchain-pinecone = "^0.1.3"
langchainhub = "^0.1.20"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
ipywidgets = "^8.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
